--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,6 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      python: 3.7
     commands:
       - curl -sS -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/aws-iam-authenticator
       - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
@@ -19,8 +17,9 @@ phases:
       - $(aws ecr get-login --no-include-email)
       - export KUBECONFIG=$HOME/.kube/configp
       - python3 -V
-      - pip3 install -r requirements.txt
-      - python3 test_main.py
+      - python3 -m pip install --upgrade pip
+      - python3 -m pip install -r requirements.txt
+      - python3 -m pytest test_main.py
   build:
     commands:
       - docker build --tag $REPOSITORY_URI:$TAG .
