--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,4 @@
-attrs==19.3.0
-click==7.1.1
-Flask==1.1.1
-gitdb==4.0.2
-GitPython==3.1.0
-gunicorn==20.0.4
-importlib-metadata==1.6.0
-itsdangerous==1.1.0
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-more-itertools==8.2.0
-packaging==20.3
-pbr==5.4.4
-pluggy==0.13.1
-py==1.8.1
-PyJWT==1.7.1
-pyparsing==2.4.6
-pytest==5.4.1
-PyYAML==5.3.1
-six==1.14.0
-smmap==3.0.1
-wcwidth==0.1.9
-Werkzeug==1.0.0
-zipp==3.1.0
+pyjwt
+flask
+gunicorn
+pytest
